--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "version": "0.0.0",
   "dependencies": {
     "express": "*",
+    "mongodb": "*",
     "mongoose": "*",
+    "monk": "^1.0.1",
     "q": "*"
   },
   "devDependencies": {
+    "body-parser": "*",
     "gulp": "*",
     "gulp-bower": "*",
-    "morgan": "*",
-    "body-parser": "*",
-    "tiny-lr": "*",
+    "gulp-concat": "*",
     "gulp-jshint": "*",
-    "gulp-notify": "*",
+    "gulp-less": "*",
     "gulp-livereload": "*",
     "gulp-nodemon": "*",
+    "gulp-notify": "*",
     "gulp-plumber": "*",
     "gulp-task-listing": "*",
-    "jshint-stylish": "*",
-    "gulp-concat": "*",
     "gulp-uglify": "*",
-    "gulp-less": "*"
+    "jshint-stylish": "*",
+    "morgan": "*",
+    "tiny-lr": "*"
   }
 }
