Deployment bug fix

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Coder Dojo Registration App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "npm install -g gulp browserify bower"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
