--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,8 @@
   ],
   "dependencies": {
     "angular": "~1.4.4",
-    "bootstrap": "~3.3.5",
-    "components-font-awesome": "~4.4.0",
-    "angular-ui-router": "~0.2.15",
-    "angular-bootstrap": "~0.13.3"
+    "angular-bootstrap": "~0.13.3",
+    "bootstrap-css-only": "~3.3.5",
+    "components-font-awesome": "~4.4.0"
   }
 }
