--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "browser": {
     "angular": "./lib/angular/angular.min.js",
     "ui.router": "./lib/angular-ui-router/release/angular-ui-router.min.js",
-    "ui.bootstrap": "./lib/angular-bootstrap/ui-bootstrap.min.js"
+    "ui.bootstrap": "./lib/angular-bootstrap/ui-bootstrap.min.js",
+    "ui.bootstrap.tpls":"./lib/angular-bootstrap/ui-bootstrap-tpls.min.js"
   },
   "browserify-shim": {
     "angular": "angular",
@@ -24,6 +25,9 @@
     },
     "ui.bootstrap": {
       "exports": "angular.module('ui.bootstrap')"
+    },
+    "ui.bootstrap.tpls": {
+        "exports": "angular.module('ui.bootstrap.tpls')"
     }
   },
   "browserify": {
