--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CoderDojo Registration App",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npm install -g bower gulp browserify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
