--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "angular": "~1.4.4",
     "angular-bootstrap": "~0.13.3",
+    "angular-ui-router": "~0.2.15",
     "bootstrap-css-only": "~3.3.5",
     "components-font-awesome": "~4.4.0"
   }
