Downgrading version of mongodb.

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
-    "mongodb": "^2.0.42",
+    "mongodb": "1.4.x",
     "monk": "^1.0.1"
   },
   "bugs": {
