--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "browserify-shim"
     ]
   },
-  "devDependencies": {
+  "dependencies": {
     "browserify": "^11.0.1",
     "browserify-css": "^0.6.1",
     "browserify-shim": "^3.8.10",
@@ -57,9 +57,7 @@
     "run-sequence": "^1.1.2",
     "stream-series": "^0.1.1",
     "tiny-lr": "^0.1.6",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "dependencies": {
+    "vinyl-source-stream": "^1.1.0",
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.1",
     "body-parser": "^1.13.3",
