--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
     ]
   },
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "body-parser": "^1.13.3",
     "browserify": "^11.0.1",
     "browserify-css": "^0.6.1",
     "browserify-shim": "^3.8.10",
+    "bulma": "^0.1.2",
     "del": "^1.2.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
+    "font-awesome": "^4.6.3",
     "fs-extra": "^0.23.1",
     "gulp": "~3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
@@ -48,25 +54,20 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-ng-config": "^1.3.1",
     "gulp-open": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "lodash": "^3.10.1",
+    "mongodb": "^2.1.4",
+    "mongoose": "^4.3.7",
     "path": "^0.11.14",
     "run-sequence": "^1.1.2",
     "stream-series": "^0.1.1",
     "tiny-lr": "^0.1.6",
-    "vinyl-source-stream": "^1.1.0",
-    "angular": "^1.5.8",
-    "angular-ui-router": "^0.3.1",
-    "body-parser": "^1.13.3",
-    "bulma": "^0.1.2",
-    "express": "^4.13.3",
-    "font-awesome": "^4.6.3",
-    "lodash": "^3.10.1",
-    "mongodb": "^2.1.4",
-    "mongoose": "^4.3.7"
+    "vinyl-source-stream": "^1.1.0"
   },
   "bugs": {
     "url": "https://github.com/melissaettinger/coderdojo-signup/issues"
