--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-ng-config": "^1.3.1",
